[package]
name = "notify-relay-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
p256 = { version = "0.13", features = ["ecdh", "pem"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
rand = "0.8"
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11"
