[package]
name = "notify-relay-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
sha1 = "0.10"
md5 = "0.7"
p256 = { version = "0.13", features = ["ecdh", "pem"] }
spake2 = { version = "0.5.0-pre.0", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
rand = "0.8"
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
libc = "0.2"
